5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4467/executions/1573_1330.log
== TEST (2019-03-27 15:14:34) 
-- CODE:
print(41,66)
-- OUTPUT:
41 66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:14:37) 
-- CODE:
print(41,66)
-- EXECUTION TIME:
0.172293
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:14:47) 
-- CODE:
print(41 66)
-- ERROR:
File "XXXX", line 1
    print(41 66)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:14:50) 
-- CODE:
print(4166)
-- OUTPUT:
4166
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:14:54) 
-- CODE:
print(4166)
-- EXECUTION TIME:
0.115271
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
4166
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:14:59) 
-- CODE:
print(4166)
-- OUTPUT:
4166
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:15:32) 
-- CODE:
print4166
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print4166
NameError: name 'print4166' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:15:35) 
-- CODE:
print 4166
-- ERROR:
File "XXXX", line 1
    print 4166
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(4166)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:15:50) 
-- CODE:
print(41)
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:15:53) 
-- CODE:
print(41)
-- EXECUTION TIME:
0.125178
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:16:06) 
-- CODE:
print(4166)
-- OUTPUT:
4166
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:16:11) 
-- CODE:
print(4166)
-- EXECUTION TIME:
0.115746
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
4166
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:16:44) 
-- CODE:
round(41,66)
-- OUTPUT:
4166
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:16:47) 
-- CODE:
round(41,66)
-- EXECUTION TIME:
0.115881
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:17:32) 
-- CODE:
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:17:33) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.211618
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:20:20) 
-- CODE:
print(round(250/6,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:20:23) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.191275
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
